Style file added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Story of an idiot</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>The idiot</h1>
@@ -13,7 +14,7 @@
     </p>
     <h2>Details</h2>
     <p>
-        I Won't be able to fill in the details, idk why i'm so angry, after a long time i lost my tempo and blast it out. Everything is filled in me but still there is lot to blast in future.
+        I Won't be able to fill in the details, idk why i'm so angry, after a long time i lost my tempo and blast it out. Everything is filled in me but still there is lot to blast in future
     </p>
 </body>
 </html>
