--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h1>The idiot</h1>
-    <p id="idiot">
+    <p class="idiot">
         Idiot of the Year goes to my BestFriend...
-        <pre>Today, after a long time i'm ashamed of my self because something happened, my fucking idiot friend did something as expected from him. Till from the very start I was correct about him. He's a completly idiot, he deserves the best idiot of the year award. I can't even tell what he just did today, but from now on i'm not gonna trust him a bit not a single bit. Not him nor anyone. It's like i lost again today. He's a fuckin idiot .</pre>
+        <pre class="idiot">Today, after a long time i'm ashamed of my self because something happened, my fucking idiot friend did something as expected from him. Till from the very start I was correct about him. He's a completly idiot, he deserves the best idiot of the year award. I can't even tell what he just did today, but from now on i'm not gonna trust him a bit not a single bit. Not him nor anyone. It's like i lost again today. He's a fuckin idiot .</pre>
     </p>
     <h2>Details</h2>
     <p>
